--- a/workflows/examples/national-parks-demo.yaml
+++ b/workflows/examples/national-parks-demo.yaml
@@ -12,7 +12,7 @@
 # Created: 2025-11-09
 # Tags: demo, getting-started
 # =============================================================================
-version: 1
+version: "1"
 name: 🏔️ National Parks Demo
 description: Creates an Elasticsearch index, loads sample national park data using bulk operations, searches for parks by category, and displays the results.
 enabled: true
