--- a/workflows/examples/root-cause-analysis-rca-workflow.yaml
+++ b/workflows/examples/root-cause-analysis-rca-workflow.yaml
@@ -28,7 +28,7 @@ enabled: true
 #   - Filtering in the workflow library
 #   - Grouping related workflows together
 # ---------------------------------------------------------------------------
-tags: []
+tags:
   - RCA
   - DEMO
 
