--- a/workflows/utilities/invoke-other-workflows.yaml
+++ b/workflows/utilities/invoke-other-workflows.yaml
@@ -25,7 +25,7 @@ enabled: true
 #   - Filtering in the workflow library
 #   - Grouping related workflows together
 # ---------------------------------------------------------------------------
-tags: []
+tags:
   - config change
   - reset defaults
 
