--- a/workflows/security/detection/create-alert-note.yaml
+++ b/workflows/security/detection/create-alert-note.yaml
@@ -66,6 +66,7 @@ steps:
     # - References workflow input parameter(s)
     # -------------------------------------------------------------------------
     - name: add_note_on_arrival
+      # This type is currently not available
       type: kibana.PersistNoteRoute
       with:
         note:
